# Wrath-of-the-Crickets-vs-Brigham-Young

./: .gitignore  .gitmodules  CMakeLists.txt  Game.sln  README.md
Game/: ClientSession.cpp  DiscordManager.cpp  DiscordManager.h  Entities.cpp  Entity.cpp  Entity.h  Game.vcxproj  Game.vcxproj.filters  Gameplay.cpp  Gameplay.h  HostSession.cpp  HostSession.h  Packets.cpp  Packets.h  Setup.cpp  Setup.h  Tiles.cpp  Tiles.h  cBoard.cpp  cBoard.h  cEnemySpawner.cpp  cEnemySpawner.h  cGuiTool.cpp  cGuiTool.h  cMultiOptions.cpp  cMultiplayerPlay.cpp  cMultiplayerPlay.h  cMultiplayerSetup.cpp  cMultiplayerSetup.h  cUI.cpp  cUI.h  main.cpp
Game/Discord/: achievement_manager.cpp  activity_manager.cpp  application_manager.cpp  core.cpp  image_manager.cpp  lobby_manager.cpp  network_manager.cpp  overlay_manager.cpp  relationship_manager.cpp  storage_manager.cpp  store_manager.cpp  types.cpp  (+2 more)
Shoelace/: SFMLDebugDraw.cpp  SFMLDebugDraw.h  Shoelace.vcxproj  Shoelace.vcxproj.filters  cResources.cpp  cResources.h  cSceneControls.cpp  cWorld.cpp  cWorld.h  slAnimation.cpp  slComponent.cpp  slComponent.h  slEntity.cpp  slEntity.h  slGame.cpp  slGame.h  slGameState.cpp  slGameState.h  slSpritesheet.h
lib/: sfgui-d.lib  sfgui.lib
src/: ClientSession.h  Entities.cpp  Entities.h  Packets.cpp  Setup.cpp  Tiles.cpp  Tiles.h  cBoard.cpp  cBoard.h  cMultiOptions.h  cMultiplayerPlay.cpp  cMultiplayerPlay.h  cMultiplayerSetup.cpp  cMultiplayerSetup.h  cResources.cpp  cResources.h  cSceneControls.h  cUI.cpp  main.cpp  slAnimation.h  slComponent.h  slEntity.h  slGameState.h  slSpritesheet.cpp
